Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-<h2>Список нарушений:</h2><b>Герасим (14)</b>: 0<br><b>AlexLeto (15)</b>: 0<br><b>Сама Сотона (14)</b>: 0<br><b>sheri_nar (14)</b>: 0<br><b>denimkus (14)</b>: 0<br><b>Тави (15)</b>: 0<br><b>Брейсс (14)</b>: 0<br><b>valerapskov (10)</b>: 0<br><b>бабусяка (14)</b>: 0<br><b>Утопленница (10)</b>: 0<br><b>тень ворона (12)</b>: 0<br><b>Аполон (12)</b>: 0<br><b>Мамору (12)</b>: 0<br><b>Каринка Удовика (11)</b>: 0<br><b>Сергей воин (13)</b>: 0<br><b>Харука (14)</b>: 0<br><b>мерлин серый (14)</b>: 0<br><b>бешенный09011 (10)</b>: 0<br><b>XXXKisskaXXX (7)</b>: 0<br><b>-Abaddon- (11)</b>: 0<br><b>Арвен 777 (9)</b>: 0<br><b>yato (11)</b>: 0<br><b>Пенсия (12)</b>: 0<br><b>lisabona (12)</b>: 0<br><b>KOT1992M (7)</b>: 0<br><b>baggira (14)</b>: 0<br><b>Sher19 (12)</b>: 0<br><b>-ВАСО- (14)</b>: 0<br><b>Азе Хирург (8)</b>: 0<br><b>Турмс (10)</b>: 0<br><b>DJ_slava (10)</b>: 0<br><b>NegaTiV (9)</b>: 0<br><b>зубастый рыбк (8)</b>: 0<br><b>валтурия15 (7)</b>: 0<br><b>WeTkA 198925 (11)</b>: 0<br><b>валдамор (13)</b>: 0<br><b>андрейка45 (6)</b>: 0<br><b>Fire Kat (7)</b>: 0<br><b>utopiya (9)</b>: 0<br><b>gerikk (7)</b>: 0<br><b>АДАМИД (8)</b>: 0<br><b>Kirito Kon (8)</b>: 0<br><b>jgmpwd (6)</b>: 0<br><b>Карин01 (8)</b>: 0<br><b>Wings Batterfly (9)</b>: 0<br><b>Веристелла (11)</b>: 0<br><b>xolloD (7)</b>: 0<br><b>ФЕНИКС-73 (11)</b>: 0<br><b>Basabi (11)</b>: 0<br><b>Зуд (7)</b>: 0<br><b>АМИДЕЯ 2 (12)</b>: 0<br><b>кирито сон (9)</b>: 0<br><b>Ganstar (7)</b>: 0<br><b>Амет (9)</b>: 0<br><b>xSlayeRx (7)</b>: 0<br><b>вергина (5)</b>: 0<br><b>Сантьяго (12)</b>: 0<br><b>Jean Grey (6)</b>: 0<br><small><br>Все нарушения посылать на ник <b>Ненчык-патыр</b> или на страницу в ВК: <a href="m.vk.com/it256">m.vk.com/it256</a>.</small>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Beesadaptic.GitHub.io : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Beesadaptic.GitHub.io</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/beesadaptic">View on GitHub</a>
+
+          <h1 id="project_title">Beesadaptic.GitHub.io</h1>
+          <h2 id="project_tagline"></h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="Сколько-людей---столько-идей" class="anchor" href="#%D0%A1%D0%BA%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D0%BB%D1%8E%D0%B4%D0%B5%D0%B9---%D1%81%D1%82%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D0%B8%D0%B4%D0%B5%D0%B9" aria-hidden="true"><span class="octicon octicon-link"></span></a>Сколько людей - столько идей</h3>
+
+<p>Ждать!
+По кругу бежишь вперед</p>
+
+<h3>
+<a id="Стимул-решать-чтобы-менять" class="anchor" href="#%D0%A1%D1%82%D0%B8%D0%BC%D1%83%D0%BB-%D1%80%D0%B5%D1%88%D0%B0%D1%82%D1%8C-%D1%87%D1%82%D0%BE%D0%B1%D1%8B-%D0%BC%D0%B5%D0%BD%D1%8F%D1%82%D1%8C" aria-hidden="true"><span class="octicon octicon-link"></span></a>Стимул решать, чтобы менять</h3>
+
+<p>Здесь!
+Чудо не придет</p>
+
+<h3>
+<a id="Цельность-границ-щедрость-души" class="anchor" href="#%D0%A6%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C-%D0%B3%D1%80%D0%B0%D0%BD%D0%B8%D1%86-%D1%89%D0%B5%D0%B4%D1%80%D0%BE%D1%81%D1%82%D1%8C-%D0%B4%D1%83%D1%88%D0%B8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Цельность границ, щедрость души</h3>
+
+<p>Нет!
+Разбиты уже давно</p>
+
+<h3>
+<a id="Истины-те-что-все-равны" class="anchor" href="#%D0%98%D1%81%D1%82%D0%B8%D0%BD%D1%8B-%D1%82%D0%B5-%D1%87%D1%82%D0%BE-%D0%B2%D1%81%D0%B5-%D1%80%D0%B0%D0%B2%D0%BD%D1%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>Истины те, что все равны</h3>
+
+<p>Блеф!
+Мечтать забыть все</p>
+
+<h2>
+<a id="Сколько-боли-в-твоих-глазах" class="anchor" href="#%D0%A1%D0%BA%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D0%B1%D0%BE%D0%BB%D0%B8-%D0%B2-%D1%82%D0%B2%D0%BE%D0%B8%D1%85-%D0%B3%D0%BB%D0%B0%D0%B7%D0%B0%D1%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>Сколько боли в твоих глазах?</h2>
+
+<h2>
+<a id="Сколько-грязи-в-твоих-устах" class="anchor" href="#%D0%A1%D0%BA%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D0%B3%D1%80%D1%8F%D0%B7%D0%B8-%D0%B2-%D1%82%D0%B2%D0%BE%D0%B8%D1%85-%D1%83%D1%81%D1%82%D0%B0%D1%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>Сколько грязи в твоих устах?</h2>
+
+<h2>
+<a id="Сколько-страха-в-твоих-снах" class="anchor" href="#%D0%A1%D0%BA%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D1%81%D1%82%D1%80%D0%B0%D1%85%D0%B0-%D0%B2-%D1%82%D0%B2%D0%BE%D0%B8%D1%85-%D1%81%D0%BD%D0%B0%D1%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>Сколько страха в твоих снах?</h2>
+
+<h3>
+<a id="И-ни-ты-ни-я-не-сможем-ничего" class="anchor" href="#%D0%98-%D0%BD%D0%B8-%D1%82%D1%8B-%D0%BD%D0%B8-%D1%8F-%D0%BD%D0%B5-%D1%81%D0%BC%D0%BE%D0%B6%D0%B5%D0%BC-%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE" aria-hidden="true"><span class="octicon octicon-link"></span></a>И ни ты, ни я не сможем ничего</h3>
+
+<h3>
+<a id="Изменить-нельзя-вере-в-себя" class="anchor" href="#%D0%98%D0%B7%D0%BC%D0%B5%D0%BD%D0%B8%D1%82%D1%8C-%D0%BD%D0%B5%D0%BB%D1%8C%D0%B7%D1%8F-%D0%B2%D0%B5%D1%80%D0%B5-%D0%B2-%D1%81%D0%B5%D0%B1%D1%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>Изменить нельзя вере в себя!</h3>
+
+<h3>
+<a id="И-ни-ты-ни-я-не-скажем-ничего" class="anchor" href="#%D0%98-%D0%BD%D0%B8-%D1%82%D1%8B-%D0%BD%D0%B8-%D1%8F-%D0%BD%D0%B5-%D1%81%D0%BA%D0%B0%D0%B6%D0%B5%D0%BC-%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE" aria-hidden="true"><span class="octicon octicon-link"></span></a>И ни ты, ни я не скажем ничего!</h3>
+
+<h3>
+<a id="Изменить-нельзя-вере-в-себя-1" class="anchor" href="#%D0%98%D0%B7%D0%BC%D0%B5%D0%BD%D0%B8%D1%82%D1%8C-%D0%BD%D0%B5%D0%BB%D1%8C%D0%B7%D1%8F-%D0%B2%D0%B5%D1%80%D0%B5-%D0%B2-%D1%81%D0%B5%D0%B1%D1%8F-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Изменить нельзя вере в себя!</h3>
+
+<h3>
+<a id="Каждый-день-каждый-год" class="anchor" href="#%D0%9A%D0%B0%D0%B6%D0%B4%D1%8B%D0%B9-%D0%B4%D0%B5%D0%BD%D1%8C-%D0%BA%D0%B0%D0%B6%D0%B4%D1%8B%D0%B9-%D0%B3%D0%BE%D0%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>Каждый день, каждый год</h3>
+
+<p>Зря!
+Учись выживать</p>
+
+<h3>
+<a id="Пламенный-пот-порванный-рот" class="anchor" href="#%D0%9F%D0%BB%D0%B0%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9-%D0%BF%D0%BE%D1%82-%D0%BF%D0%BE%D1%80%D0%B2%D0%B0%D0%BD%D0%BD%D1%8B%D0%B9-%D1%80%D0%BE%D1%82" aria-hidden="true"><span class="octicon octicon-link"></span></a>Пламенный пот, порванный рот</h3>
+
+<p>Взвесь!
+Учись понимать</p>
+
+<h3>
+<a id="Сколько-хотел-столько-и-жил" class="anchor" href="#%D0%A1%D0%BA%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D1%85%D0%BE%D1%82%D0%B5%D0%BB-%D1%81%D1%82%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE-%D0%B8-%D0%B6%D0%B8%D0%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>Сколько хотел столько и жил</h3>
+
+<p>Врешь!
+Отмерено Богом все</p>
+
+<h3>
+<a id="Боготворил-всех-полюбил" class="anchor" href="#%D0%91%D0%BE%D0%B3%D0%BE%D1%82%D0%B2%D0%BE%D1%80%D0%B8%D0%BB-%D0%B2%D1%81%D0%B5%D1%85-%D0%BF%D0%BE%D0%BB%D1%8E%D0%B1%D0%B8%D0%BB" aria-hidden="true"><span class="octicon octicon-link"></span></a>Боготворил, всех полюбил</h3>
+
+<p>Ты лжешь!
+Не в праве решать за нас</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
